# racer

./: .appveyor.yml  .gitignore  CHANGELOG.md  Cargo.toml  README.md
benches/: bench.rs
src/racer/: ast.rs  codecleaner.rs  codeiter.rs  core.rs  fileres.rs  lib.rs  matchers.rs  nameres.rs  scopes.rs  snippets.rs  testutils.rs  typeinf.rs  util.rs
test_project/test_fixtures/src/: lib.rs
tests/: system.rs  utils.rs
