[package]

name = "racer-nightly"
version = "2.1.0"
license = "MIT"
description = "Code completion for Rust"
authors = ["Phil Dawes <phil@phildawes.net>", "Yuji Kanagawa <yuji.kngw.80s.revive@gmail.com>"]
homepage = "https://github.com/kngwyu/racer-nightly"
repository = "https://github.com/kngwyu/racer-nightly"

[lib]
name = "racer"
path = "src/racer/lib.rs"

[[bin]]
name = "racer"
path = "src/bin/main.rs"
doc = false

[profile.release]
debug = true

[dependencies]
log = "0.4"
syntex_syntax = "0.52.0"
syntex_errors = "0.52.0"
toml = "0.2.1"
env_logger = "0.5"
clap = "2.19"
lazy_static = "1.0"
rustc-ap-rustc_errors = "73.0.0"
rustc-ap-syntax = "73.0.0"
rustc-ap-syntax_pos = "73.0.0"

[dependencies.clippy]
version = "0.0.103"
optional = true

[dev-dependencies]
rand = "0.4"
lazy_static = "1.0"

[features]
nightly = []
