[package]

name = "racer-nightly"
version = "2.1.3"
license = "MIT"
description = "Code completion for Rust"
authors = ["Phil Dawes <phil@phildawes.net>", "Yuji Kanagawa <yuji.kngw.80s.revive@gmail.com>"]
homepage = "https://github.com/kngwyu/racer-nightly"
repository = "https://github.com/kngwyu/racer-nightly"

[lib]
name = "racer"
path = "src/racer/lib.rs"

[[bin]]
name = "racer"
path = "src/bin/main.rs"
doc = false

[dependencies]
log = "0.4"
env_logger = "0.5"
cargo = "0.27"
clap = "2.31"
lazy_static = "1.0"
rustc-ap-syntax = "128.0.0"

[dependencies.clippy]
version = "0.0.195"
optional = true

[dev-dependencies]
tempfile = "3.0"
